core-spring-boot-starter: switch on java 17 and spring boot 3